[tool.poetry]
name = "clairbuoyant_backend"
version = "0.1.0"
description = "Surf forecasting application."
authors = ["Kyle Burda"]
maintainers = ["Kyle Burda"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = [
    "Buoy",
    "Weather",
    "Django API",
    "Journaling",
    "Web Scraping",
    "Surf Forecasting",
    "RESTful Framework",
]

[tool.poetry.dependencies]
Django = "^3.1.3"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.5.0"
psycopg2 = "^2.8.6"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
